--- a/paper/ldpcGpuTegra_bibliography.bib
+++ b/paper/ldpcGpuTegra_bibliography.bib
@@ -246,7 +246,7 @@ month={July},}
 
 @INPROCEEDINGS{art_memory_coalesced, 
 author={S. Kang and J. Moon}, 
-booktitle={Communications (ICC), 2012 IEEE International Conference on}, 
+booktitle={Communications (ICC), 2012 IEEE International Conference on Proc}, 
 title={Parallel LDPC decoder implementation on GPU based on unbalanced memory coalescing}, 
 year={2012}, 
 pages={3692-3697}, 
@@ -298,7 +298,7 @@ month={Feb},}
 @ARTICLE{art_ldpc_OpenCl_1, 
 author={J. Andrade and G. Falcao and V. Silva}, 
 journal={Electronics Letters}, 
-title={Flexible design of wide-pipeline-based WiMAX QC-LDPC decoder architectures on FPGAs using high-level synthesis}, 
+title={Flexible design of wide-pipeline-based WiMAX QC-LDPC decoder architectures on {FPGA}s using high-level synthesis}, 
 year={2014}, 
 volume={50}, 
 number={11}, 
