--- a/paper/ldpcGpuTegra_bibliography.bib
+++ b/paper/ldpcGpuTegra_bibliography.bib
@@ -443,3 +443,8 @@ doi={10.1109/JSAC.2009.090816},
 ISSN={0733-8716}, 
 month={August},}
 
+@article{art_castello,
+  title={An Introduction to Low-Density Parity Check Codes},
+  author={Costello Jr, Daniel J},
+  year={2009}
+}
