--- a/paper/ldpcGpuTegra.tex
+++ b/paper/ldpcGpuTegra.tex
@@ -68,6 +68,9 @@
 %
 \usepackage{url}
 
+% Table packages
+\usepackage{booktabs}
+\usepackage{multirow}
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
 
@@ -162,7 +165,7 @@ The general decoding algorithm of LDPC codes is based on the standard two-phase 
 
 \begin{algorithm}
 \renewcommand\thealgorithm{}
-\caption{Min-Sum algorithm}\label{algorithm1}
+\caption{\textbf{1} Min-Sum algorithm}\label{algorithm1}
 \begin{algorithmic}[1]
 \STATE \textbf{Loop 1:} Initialization
 \FORALL{$m \in C, n \in V$}
@@ -195,69 +198,80 @@ $Lq_{nm}=0$%LP_n=\dfrac{2y_n}{\sigma^2}.$
 One major drawback of algorithm 1 is that, loops 2 and 3 are updated by separate processing and passed to each other iteratively. It means that variable nodes' update loop, will not start until all check nodes are updated. This characteristic affects the efficiency of parallel implementation of such algorithm. 
 
 Due to poor parallel mapping of MS algorithm, more efficient schedules, such as horizontal layered-based decoding algorithm, are proposed which allow updated imformation to be utilized more quickly in the algorithm, thus, speeding up the decoding\cite{art_layered0, art_layered1}. In fact, the H-matrix can be viewed as a layered graph that is decoded sequentially. The work in \cite{art_gpu_0} has applied a form of layered belief propagation to irregular LDPC codes to reach 2x faster convergence in a given error rate. By using this method they have reduced memory bits usage by 45-50\%. The layered decoding (Algorithm 2), which is used in the proposed algorithm, can be summarized as follow: all values for the check node computations are computed using variable node messages linked to them. Once, a check node is calculated, the corresponding variable nodes are updated immediately after receiving messages. This process is repeated to the maximum number of iterations.
-\begin{algorithm}\label{algorithm2}
+
+\begin{algorithm}
 \renewcommand\thealgorithm{}
-\caption{Horizontal Layered Min-Sum algorithm}
-\begin{algorithmic}
+\caption{\textbf{2} Horizontal Layered Min-Sum algorithm}\label{algorithm2}
+\begin{algorithmic}[1]
 \STATE \textbf{Loop 1:} Initialization
-\FORALL{$m \in C, n \in V$}
+\FORALL{$m \in C, n \in N(m)$}
 \STATE
-$Lr_{mn}=0$
+$Lr_{mn}^{(0)}=0$%LP_n=\dfrac{2y_n}{\sigma^2}.$
+%\ENDIF
 \ENDFOR
 \FORALL{$t=1 \rightarrow (iter\_max)$}
-\STATE \textbf{Loop 2:} Process each CN one after another
+\STATE \textbf{Loop 2:} For each check node
 \FORALL{$m \in C$}
+\FORALL{$n \in N(m)$}
+\STATE$Lr_{nm}^{(t)}=E_n - Lr_{nm}^{(t-1)}$
+\ENDFOR
+\FORALL{$n \in N(m)$}
+\STATE $\alpha_{nm} \triangleq sign(Lr_{nm}^{(t)}),$
+\STATE $\beta_{nm} \triangleq \abs{Lr_{nm}^{(t)}},$
+\STATE $Lr_{mn}^{(t)} = \prod\limits_{n' \in N(m)\backslash n} \alpha_{n'm} \min\limits_{n' \in N(m)\backslash n} \beta_{n'm}.$
+\ENDFOR
+\FORALL{$n \in N(m)$}
+\STATE$E_n = Lr_{nm}^{(t)}+Lr_{mn}^{(t)}$
+\ENDFOR
+\ENDFOR
+\STATE \textbf{Loop 3:} Hard decision
 \FORALL{$n \in V$}
-\STATE $\alpha_{nm} \triangleq sign(Lq_{nm}),$
-\STATE $\beta_{nm} \triangleq \abs{Lq_{nm}},$
-\STATE $Lr'_{mn} = \prod\limits_{n' \in N(m)\backslash n} \alpha_{n'm} \min\limits_{n' \in N(m)\backslash n} \beta_{n'm}.$ \STATE\COMMENT{$Lr'_{mn}$ is the new calculated message to $VN_n$}
+\STATE $\forall n, \hat{c}=[E_n]>0$
 \ENDFOR
-\ENDFOR
-\FORALL{$n \in V$}
-\STATE $LQ'_n=LQ_n-Lr_{mn}+Lr'_{mn}$
-\ENDFOR
-\ENDFOR % END Iteration
-\STATE \textbf{Loop 3:} Hard decision from soft-values
-\FORALL{$n \in V$}
-\STATE $\forall n, \hat{c}=[LQ_n]>0.$
-\ENDFOR
+\ENDFOR % End of Iter
 \end{algorithmic}
 \addtocounter{algorithm}{-1}
 \end{algorithm}
-
 This paper implements layered decoding of ldpc codes on the GPU device of a mobile processor with high throughput and low latency performance. By using GPU device as the processing unit, much less process of ARM processor is used for decoding compared to similar work in \cite{art_neon}, thus there will be processing power for other applications of a mobile device. On the other hand, since the GPU and ARM of a mobile device are sitting on a same die, the latency issues in \cite{art_gpu_0} are improved.
 %Although layered algorithm is composed of a single loop kernel composed to two sequential kernels in standard algorithms, it has an irregular memory access as a major limitation. To solve this irregular memory access, a data interleaving/deinterleaving process is used before and after the decoding process in \cite{art_gpu_0, art_neon}, which is used in the proposing algorithm too. 
 %In \cite{art_gpu_0}, the GPU decoder achieves high throughputs but its latency that goes beyond seconds makes it suitable for simulation purposes only. On the other hand, the ARM decoder proposed in \cite{art_neon} uses all computing resources (4 existing cores) for LDPC decoding and does not take advantage of GPU processing on mobile devices. 
 \section{Algorithm Mapping}\label{sec3}
 
-An efficient implementation of the layered decoding algorithm is a challenging task. The drawbacks of this algorithm as in terms of programming are: (i) the number of computations respect to number of memory access is low; (ii) the data reusing between consecutive computations is low; (iii) it requires a large set of irregular memory access due to H-matrix structure \cite{art_ldpc_cpu1}. Considering these, a software-based decoder should take advantage of different parallelism levels offered by the target architecture to achieve high throughput efficiency. In this section, first the target architecture's features are presented. Then the decoding algorithm is detailed.
-
-\subsection{Target architecture} \label{target_architecture}
-In this study, we focused on embedded devices equipped with ARM and GPU processors. One example is Jetson K1 SoCs which contains a 4-core Cortex-A15 and a GPU processor.
-
-ARM Cortex-A15 processor is composed of 15 integer/17-25 floating point pipeline stages. To limit the level of memory access latency, it has multi-level caches as 32 KB data + 32 KB instruction L1 cache per core and an integrated low-latency L2 cache controller, up to 4 MB per cluster. Each core includes a NEON SIMD unit which can execute up to 16 computations on 8-bit data simultaneously. As in terms of GU features, concurrent kernel execution capability of this device is most used in the proposed mapping. To achieve high throughput performance on such a low-power embedded processors, SIMD and SIMT programming models are exploited in the proposed LDPC decoder. In the next subsections, we detailed the different parallelism levels along with the implementation choices.
+An efficient implementation of the layered decoding algorithm is a challenging task. The drawbacks of this algorithm as in terms of programming are: (i) the number of computations with respect to the number of memory access is low; (ii) the data reuse between consecutive computations is low; (iii) it requires a large set of irregular memory access due to the sparse H-matrix structure \cite{art_ldpc_cpu1}. Considering these, a software-based decoder should take advantage of different parallelism levels offered by the target architecture to achieve high throughput efficiency. In this section, we detailed the different parallelism levels, target architecture along with the structure of proposed algorithm.
 
 \subsection{Parallelism levels in the proposed algorithm}
-To achieve high throughput performance, a software LDPC decoder has to exploit computation parallelism for taking advantage of multi-core architectures. Different parallelism levels are present in a layered decoding algorithm. \textbf{First parallelism level} is located inside the CN computations (Algorithm 2, loops located at line 8 and 15). It is possible to execute such computations in parallel, however this atomic parallelism level is hard to exploit due to the low complexity of computations. \textbf{Second parallelism level} is located at CN level (Algorithm 2, line 7). Two CN computations can be done in parallel if there is no data dependency. Thus this level is hard to exploit and inefficient. \textbf{Third parallelism level} is located at frame level (Complete Algorithm 2). A same computation sequence is executed over consecutive frames. This approach provides an efficient parallel processing algorithm. So we have used single instruction multiple data (SIMD) programming model to decode F frames in parallel. 
+To achieve high throughput performance, a software LDPC decoder has to exploit computation parallelism for taking advantage of multi-core architectures. Different parallelism levels are present in a layered decoding algorithm.
+\begin{itemize}
+  \item[$\bullet$ ] First parallelism level is located inside the check node computations (Algorithm 2, loops located at line 8, 11 and 16). It is possible to execute such computations in parallel, however this atomic parallelism level is hard to exploit due to the low complexity of computations.
+\item[$\bullet$ ] Second parallelism level is located at check node level (Algorithm 2, line 7). Two check node computations can be done in parallel if there is no data dependency. Thus this level is hard to exploit and inefficient.
+\item[$\bullet$ ] Third parallelism level is located at frame level (Complete Algorithm 2 execution). A same computation sequence is executed over consecutive frames. This approach provides an efficient parallel processing algorithm. 
+\end{itemize}
+So we have used single instruction multiple data (SIMD) programming model to decode F frames in parallel. In subsection \ref{subsec_proposed} the parallel decoding of F frames is called kernel 2 .
+%In the next subsections, first the target architecture's features are presented. Then the structure of the proposed algorithm is detailed.
+
+\subsection{Target architecture} \label{target_architecture}
+In this study, we focused on embedded devices equipped with ARM and GPU processors. One example is Jetson K1 SoCs which consists of a 4-core Cortex-A15 and an NVIDIA GK20a GPU processor.
+
+An ARM Cortex-A15 processor is composed of 15 integer/17-25 floating point pipeline stages. To limit the level of memory access latency, it has multi-level caches as 32 KB data plus 32 KB instruction L1 cache per core and an integrated low-latency L2 cache up to 4 MB. As in terms of GPU features, concurrent kernel execution capability of this device is most used in the proposed mapping. To achieve high throughput performance on such a low-power embedded processors, SIMD and SIMT programming models are exploited in the proposed LDPC decoder. 
 
 \subsection{Data Interleaving/deinterleaving}
-The implementation of the parallel frame processing is subject to massive irregular memory access due to the structure of H-matrix. As a matter of fact, to process the same $VN_i$ element of the F frames at the same time, non-contiguous memory access would affect performance. To solve this issue, a data interleaving process has to be performed before and after decoding stage. So channel information coming from F frames are reordered to achieve an aligned memory data structure. This reordering is shown in Figure \ref{fig_intreleave}.
+The implementation of the parallel frame processing is subject to massive irregular memory access due to the structure of H-matrix. As a matter of fact, to process the same $VN_i$ element of the F frames at the same time, non-contiguous memory access would affect performance. To solve this issue, a data interleaving process has to be performed before and after decoding stage. So each F frames are reordered to achieve an aligned memory data structure. This reordering is shown in Figure \ref{fig_intreleave}\cite{art_ldpc_cpu1}. In the proposed structure, interleaving and deinterleaving of frames are called {kernel 1} and {kernel 3}.
 
 \begin{figure}[h]
 \begin{centering}
 \scalebox{0.25}{\includegraphics{inter1.jpg}}
-\caption[width=.3\textwidth]{Data interleaving/deinterleaving process}
+\caption[width=.3\textwidth]{Data interleaving/deinterleaving process\cite{art_ldpc_cpu1}}
 \label{fig_intreleave}
 \end{centering}
 \end{figure}
 
-\subsection{Stream based parallelism}
+\subsection{Multi Stream parallelism}\label{subsec_proposed}
 
-SIMT programming model is used to decode W sets of F frames concurrently, with W the number of concurrent streams on the GPU device. This multi-core programming is specified by CUDA API. Each gpu stream is controlled by a \textit{pthread} called \textit{worker} on the host machine (which is an ARM in this case). Each \textit{worker} is responsible for its own sets of frames. By using stream based processing, the system can decode W$*$F frames at the same time. The whole LDPC decoder system model is shown in Figure \ref{fig_total}.
+SIMT programming model is used to decode W sets of F frames concurrently, with W denoting the number of concurrent streams on the GPU device. This multi-core programming is specified by CUDA API. Each GPU stream is controlled by a \textit{pthread} called \textit{worker} on the host machine (which is an ARM in this case). Each \textit{worker} is responsible for its own sets of frames. By using stream based processing, the system can decode W$\times$F frames at the same time. The whole LDPC decoder system model is shown in Figure \ref{fig_total}.
 
 \begin{figure}[h]
 \begin{centering}
-\scalebox{0.5}{\includegraphics{total.pdf}}
+\scalebox{0.4}{\includegraphics{total_new.jpg}}
 \caption[width=.3\textwidth]{LDCP Decoder Data Flow}
 \label{fig_total}
 \end{centering}
@@ -269,10 +283,65 @@ The experiments were carried out by decoding LDPC codes using NVIDIA Tegra K1 So
 
 \subsection{Performance evaluation of heterogeneous algorithm} 
 
+\begin{figure}[h]
+\begin{centering}
+\includegraphics[scale=0.35]{air.jpg}
+\caption[width=.5\textwidth]{Measured throughputs for 10 layered decoding iterations (1-7 LDPC codes: $576 \times 288, 1024 \times 512, 1200 \times 600, 1944 \times 722, 4000 \times 2000, 8000 \times 4000, 9972 \times 4086$)}\label{fig::air}
+\end{centering}
+\end{figure}
 
 \subsection{Performance comparison with related works}
 
+\begin{table}[]
+\centering
+\caption{Throughput (Mbps) Comparison With Related Work} \label{table_compare_arm}
+\resizebox{\columnwidth}{!}{%
+\begin{tabular}{@{}|c|c|c|c|c|@{}}
+\toprule
+\textbf{}            & \multicolumn{2}{c|}{\textbf{ARM decoder , 1 thread}} & \multicolumn{2}{l|}{\textbf{Proposed ARM decoder, 3 threads}} \\ \midrule
+\textbf{code}        & \textbf{(Mbps)}          & \textbf{Process}          & \textbf{(Mbps)}               & \textbf{Process}              \\ \midrule
+\textbf{(4000,2000)} & \textbf{35}              & \textbf{100\%}            & \textbf{34.5}                 & \textbf{24\%}                 \\ \midrule
+\textbf{(8000,4000)} & \textbf{34}              & \textbf{100\%}            & \textbf{33}                   & \textbf{24\%}                 \\ \bottomrule
+\end{tabular}%
+}
+\end{table}
 
+
+% Please add the following required packages to your document preamble:
+% \usepackage{booktabs}
+% \usepackage{multirow}
+\begin{table}[]
+\centering
+\caption{Throughput of algorithm on different GPU devices}\label{table:gpus}
+\begin{tabular}{@{}cc|c|cc@{}}
+\toprule
+\textbf{code}                        & \textbf{target}                    & \textbf{iter} & \textbf{\#1} & \textbf{\#3}  \\ \midrule
+\multirow{8}{*}{\textbf{(576,288)}}  & \multirow{2}{*}{\textbf{GT540M}}   & \textbf{10}   & \textbf{23}  & \textbf{33}   \\ \cmidrule(l){3-5} 
+                                     &                                    & \textbf{5}    & \textbf{44}  & \textbf{61}   \\ \cmidrule(l){2-5} 
+                                     & \multirow{2}{*}{\textbf{K620}}     & \textbf{10}   & \textbf{23}  & \textbf{30}   \\ \cmidrule(l){3-5} 
+                                     &                                    & \textbf{5}    & \textbf{45}  & \textbf{61}   \\ \cmidrule(l){2-5} 
+                                     & \multirow{2}{*}{\textbf{GTX680}}   & \textbf{10}   & \textbf{94}  & \textbf{127}  \\ \cmidrule(l){3-5} 
+                                     &                                    & \textbf{5}    & \textbf{163} & \textbf{217}  \\ \cmidrule(l){2-5} 
+                                     & \multirow{2}{*}{\textbf{TeslaK20}} & \textbf{10}   & \textbf{66}  & \textbf{90}   \\ \cmidrule(l){3-5} 
+                                     &                                    & \textbf{5}    & \textbf{123} & \textbf{165}  \\ \midrule
+\multirow{8}{*}{\textbf{(4000,2000)}}& \multirow{2}{*}{\textbf{GT540M}}   & \textbf{10}   & \textbf{27}  & \textbf{34}   \\ \cmidrule(l){3-5} 
+                                     &                                    & \textbf{5}    & \textbf{27}  & \textbf{37}   \\ \cmidrule(l){2-5} 
+                                     & \multirow{2}{*}{\textbf{K620}}     & \textbf{10}   & \textbf{24}  & \textbf{32}   \\ \cmidrule(l){3-5}
+                                     &                                    & \textbf{5}    & \textbf{44}   & \textbf{60}   \\ \cmidrule(l){2-5}
+                                     & \multirow{2}{*}{\textbf{GTX680}}   & \textbf{10}   & \textbf{98}  & \textbf{131}  \\ \cmidrule(l){3-5}
+                                     &                                    & \textbf{5}    & \textbf{164}  & \textbf{230}  \\ \cmidrule(l){2-5}
+                                     & \multirow{2}{*}{\textbf{TeslaK20}} & \textbf{10}   & \textbf{73}  & \textbf{98}   \\ \cmidrule(l){3-5}
+                                     &                                    & \textbf{5}    & \textbf{139} & \textbf{196}  \\ \midrule
+\multirow{8}{*}{\textbf{(2304,1152)}}& \multirow{2}{*}{\textbf{GT540M}}   & \textbf{10}   & \textbf{25}  & \textbf{37}   \\ \cmidrule(l){3-5} 
+                                     &                                    & \textbf{5}    & \textbf{47}  & \textbf{63}   \\ \cmidrule(l){2-5} 
+                                     & \multirow{2}{*}{\textbf{K620}}     & \textbf{10}   & \textbf{23}  & \textbf{31.5} \\ \cmidrule(l){3-5}
+                                     &                                    & \textbf{5}    & \textbf{47}  & \textbf{63}    \\ \cmidrule(l){2-5}
+                                     & \multirow{2}{*}{\textbf{GTX680}}   & \textbf{10}   & \textbf{94}  & \textbf{132}  \\ \cmidrule(l){3-5}
+                                     &                                    & \textbf{5}    & \textbf{170} & \textbf{226}   \\ \cmidrule(l){2-5}
+                                     & \multirow{2}{*}{\textbf{TeslaK20}} & \textbf{10}   & \textbf{66}  & \textbf{94}   \\ \cmidrule(l){3-5}
+                                     &                                    & \textbf{5}    & \textbf{127} & \textbf{170}  \\ \bottomrule
+\end{tabular}
+\end{table}
 \section{Conclusion}
 The conclusion goes here.
 
@@ -287,3 +356,33 @@ The conclusion goes here.
 \end{document}
 
 
+
+%%\begin{algorithm}\label{algorithm2}
+%%\renewcommand\thealgorithm{}
+%%\caption{Horizontal Layered Min-Sum algorithm}
+%%\begin{algorithmic}
+%%\STATE \textbf{Loop 1:} Initialization
+%%\FORALL{$m \in C, n \in V$}
+%%\STATE
+%%$Lr_{mn}=0$
+%%\ENDFOR
+%%\FORALL{$t=1 \rightarrow (iter\_max)$}
+%%\STATE \textbf{Loop 2:} Process each CN one after another
+%%\FORALL{$m \in C$}
+%%\FORALL{$n \in V$}
+%%\STATE $\alpha_{nm} \triangleq sign(Lq_{nm}),$
+%%\STATE $\beta_{nm} \triangleq \abs{Lq_{nm}},$
+%%\STATE $Lr'_{mn} = \prod\limits_{n' \in N(m)\backslash n} \alpha_{n'm} \min\limits_{n' \in N(m)\backslash n} \beta_{n'm}.$ \STATE\COMMENT{$Lr'_{mn}$ is the new calculated message to $VN_n$}
+%%\ENDFOR
+%%\ENDFOR
+%%\FORALL{$n \in V$}
+%%\STATE $LQ'_n=LQ_n-Lr_{mn}+Lr'_{mn}$
+%%\ENDFOR
+%%\ENDFOR % END Iteration
+%%\STATE \textbf{Loop 3:} Hard decision from soft-values
+%%\FORALL{$n \in V$}
+%%\STATE $\forall n, \hat{c}=[LQ_n]>0.$
+%%\ENDFOR
+%%\end{algorithmic}
+%%\addtocounter{algorithm}{-1}
+%%\end{algorithm}
