--- a/paper/ldpcGpuTegra.tex
+++ b/paper/ldpcGpuTegra.tex
@@ -130,7 +130,7 @@ To solve this issue, ARM-based SDR systems have been proposed in recent years \c
 %ARMs and NEON
 %Contributions
 
-The contributions of this paper are threefold. First, it proposes an LDPC decoder for an embedded device which exploits GPU of the device. This allows the ARM processor to also support other applications on a mobile device. Second, as a consequence of this, by using the GPU of a mobile device, less memory from the ARM processor is being used which is typically limited in an embedded system. Third, the structure of the proposed decoder is based on multiple GPU streams which first makes it scalable to other architectures, and second the process imposed by decoding can be controlled by choosing correct number of data streams sent to GPU device. On the other hand, since the ARM and GPU of an embedded device are sitting on a same die, latency issues of GPU implementations has been improved.
+The contributions of this paper are threefold. First, it proposes an LDPC decoder for an embedded device which exploits GPU of the device. This allows the ARM processor to also support other applications on a mobile device. Second, as a consequence of this, by using the GPU of a mobile device, less memory from the ARM processor is being used which is typically limited in an embedded system. Third, the structure of the proposed decoder is based on multiple GPU streams which first makes it scalable to other architectures, and second the process imposed by decoding can be controlled by choosing correct number of data streams sent to the GPU device. On the other hand, since the ARM and GPU of an embedded device are sitting on a same die, latency issues of GPU implementations has been improved.
 
 The remainder of the paper is structured as follows. Section \ref{sec2} briefly introduces the LDPC code family and its decoding algorithms. Then the proposed heterogeneous algorithm on embedded targets is described in Section \ref{sec3}. Finally, \ref{sec4} gives experimental results and some comparisons with other ARM implementations.
 
@@ -279,9 +279,12 @@ SIMT programming model is used to decode W sets of F frames concurrently, with W
 
 \section{Experimental Results} \label{sec4}
 
-The experiments were carried out by decoding LDPC codes using NVIDIA Tegra K1 Socs. The programs compiled with GCC-4.8 and CUDA 6.5. The TK1 is composed of 4 cortex-A15 ARM processors and one NVIDIA Kepler "GK20a" GPU with 192 SM3.2 CUDA cores. The host platform uses a GNU/Linux kernel 3.10.40.
+The experiments were carried out by decoding LDPC codes using NVIDIA Tegra K1 SoCs. The programs compiled with GCC-4.8 and CUDA 6.5. The TK1 is composed of 4 cortex-A15 ARM processors and one NVIDIA Kepler "GK20a" GPU with 192 SM3.2 CUDA cores. The host platform uses a GNU/Linux kernel 3.10.40.
 
-\subsection{Performance evaluation of heterogeneous algorithm} 
+\subsection{Performance evaluation of proposed algorithm} 
+First set of experiments was performed to achieve air throughput using different codes. The codes have different frame lengths: 576 to 9972. The air throughputs are provided in Fig.\ref{fig::air} when \{1,3\} threads are used to handle \{1,3\} GPU streams. Measurements are performed for LDPC decoders that execute 10 layered-base decoding iterations.
+
+Performance of one stream (or one thread) achieves 25 Mbps, while with 3 streams it can be as high as 35 Mbps. For (4000,2000) LDPC code and one thread, data transfer takes about 2$\times$2.4 ms, interleaving steps need about 2$\times$5 ms and decoding takes about 150 ms. For the same code with 3 threads, data transfer takes about 2$\times$2.4 ms, interleaving steps need about 2$\times$5 ms and decoding takes about 150 ms. So by introducing more streams to GPU device, its performance does not degrade. Comparing the latency introduced by data transfer between host and GPU device in \cite{art_gpu_0} which is about 20 ms, it has been reduced to 4.8 ms because of the architecture of embed device. On the other hand, with introducing 3 threads to GPU, its whole processing capacity is used which results to about 30\% throughput improvement in all our experiments.
 
 \begin{figure}[h]
 \begin{centering}
@@ -291,8 +294,8 @@ The experiments were carried out by decoding LDPC codes using NVIDIA Tegra K1 So
 \end{figure}
 
 \subsection{Performance comparison with related works}
-
-\begin{table}[]
+To demonstrate the efficiency of the proposed ARM decoder, its throughput was compared to ARM related work in \cite{art_neon}. In \cite{art_neon}, ARM SIMD units are used to perform vector data processing in parallel frame processing. In the experiment, the throughput of the proposed decoder is compared to their work by using 1 thread for work in \cite{art_neon} and 3 threads in proposed algorithm. Two codes with 10-iteration decoding performed on Tegra-K1 board gives us the results as shown in Table \ref{table_compare_arm}. The work in \cite{art_neon} can achieve much higher throughputs by using more threads on ARM, but by introducing each thread, the whole capacity of one more ARM core is used for decoding. But in proposed algorithm, by introducing one thread, just 8\% process is used from ARM processor. Although by using more powerful GPU device, the algorithm can achieve much higher throughputs which has been shown in next subsection. In Table \ref{table_compare_arm}, it is shown that the proposed algorithm can achieve the same throughput in \cite{art_neon} with using 24\% of ARM processing power and using its GPU device. 
+\begin{table}[h]
 \centering
 \caption{Throughput (Mbps) Comparison With Related Work} \label{table_compare_arm}
 \resizebox{\columnwidth}{!}{%
@@ -306,16 +309,16 @@ The experiments were carried out by decoding LDPC codes using NVIDIA Tegra K1 So
 }
 \end{table}
 
+\subsection{Performance comparison on different GPU devices}
 
-% Please add the following required packages to your document preamble:
-% \usepackage{booktabs}
-% \usepackage{multirow}
-\begin{table}[]
+GPU devices have different characteristics: amount of stream multiprocessors, CUDA cores, working frequencies, etc. For a GPU based algorithm, the scalability and using its all processing capability is important. In Table \ref{table:gpus}, proposed algorithm has been carried out on multiple GPU devices. GT540M and K620, are considered as mid-range and GTX680 and TeslaK20 are considered as high power GPU devices. The performance in Table \ref{table:gpus} shows that the proposed algorithm can achieve up to 230 Mbps performance. 
+
+\begin{table}[h]
 \centering
-\caption{Throughput of algorithm on different GPU devices}\label{table:gpus}
+\caption{Throughput (\textit{Mbps}) of algorithm on different GPUs}\label{table:gpus}
 \begin{tabular}{@{}cc|c|cc@{}}
 \toprule
-\textbf{code}                        & \textbf{target}                    & \textbf{iter} & \textbf{\#1} & \textbf{\#3}  \\ \midrule
+\textbf{code}                        & \textbf{target}                    & \textbf{iter} & \multirow{2}{*}\textbf{\#1 thread} & \multirow{2}{*}\textbf{\#3 thread}  \\ \midrule
 \multirow{8}{*}{\textbf{(576,288)}}  & \multirow{2}{*}{\textbf{GT540M}}   & \textbf{10}   & \textbf{23}  & \textbf{33}   \\ \cmidrule(l){3-5} 
                                      &                                    & \textbf{5}    & \textbf{44}  & \textbf{61}   \\ \cmidrule(l){2-5} 
                                      & \multirow{2}{*}{\textbf{K620}}     & \textbf{10}   & \textbf{23}  & \textbf{30}   \\ \cmidrule(l){3-5} 
@@ -342,10 +345,11 @@ The experiments were carried out by decoding LDPC codes using NVIDIA Tegra K1 So
                                      &                                    & \textbf{5}    & \textbf{127} & \textbf{170}  \\ \bottomrule
 \end{tabular}
 \end{table}
-\section{Conclusion}
-The conclusion goes here.
 
-\newpage
+\section{Conclusion}
+A heterogeneous approach for GPU-based LDPC decoding on embedded devices was introduced in this paper. This algorithm is based on running multiple concurrent kernels on GPU device to achieve its full processing capacity and using as less process as possible from ARM device. This approach helps to achieve desirable throughputs on embedded devices. Experimental results demonstrate that proposed algorithm is scalable and can achieve high throughputs on multiple GPU devices. Moreover, the proposed algorithm structure makes it easy for the operating system on the embedded device to control its process and performance by choosing number of streams created by the algorithm.
+
+%\newpage
 
 \bibliographystyle{IEEEtran}
 \bibliography{IEEEabrv,ldpcGpuTegra_bibliography}
