--- a/paper/ldpcGpuTegra.tex
+++ b/paper/ldpcGpuTegra.tex
@@ -284,7 +284,7 @@ The experiments were carried out by decoding LDPC codes using NVIDIA Tegra K1 So
 \subsection{Performance evaluation of proposed algorithm} 
 First set of experiments was performed to achieve air throughput using different codes. The codes have different frame lengths: 576 to 9972. The air throughputs are provided in Fig.\ref{fig::air} when \{1,3\} threads are used to handle \{1,3\} GPU streams. Measurements are performed for LDPC decoders that execute 10 layered-base decoding iterations.
 
-Performance of one stream (or one thread) achieves 25 Mbps, while with 3 streams it can be as high as 35 Mbps. For (4000,2000) LDPC code and one thread, data transfer takes about 2$\times$2.4 ms, interleaving steps need about 2$\times$5 ms and decoding takes about 150 ms. For the same code with 3 threads, data transfer takes about 2$\times$2.4 ms, interleaving steps need about 2$\times$5 ms and decoding takes about 150 ms. So by introducing more streams to GPU device, its performance does not degrade. Comparing the latency introduced by data transfer between host and GPU device in \cite{art_gpu_0} which is about 20 ms, it has been reduced to 4.8 ms because of the architecture of embed device. On the other hand, with introducing 3 threads to GPU, its whole processing capacity is used which results to about 30\% throughput improvement in all our experiments.
+Performance of one stream (or one thread) achieves 25 Mbps, while with 3 streams it can be as high as 35 Mbps. For (4000,2000) LDPC code and one thread, data transfer takes about 2$\times$2.4 ms, interleaving steps need about 2$\times$5 ms and decoding takes about 150 ms. For the same code with 3 threads, data transfer takes about 2$\times$2.4 ms, interleaving steps need about 2$\times$5 ms and decoding takes about 150 ms. So by introducing more streams to GPU device, its performance does not degrade. Comparing the latency introduced by data transfer between host and GPU device in \cite{art_gpu_0} which is about 20 ms, it has been reduced to 4.8 ms because of the architecture of embedded device. On the other hand, with introducing 3 threads to GPU, its whole processing capacity is used which results to about 30\% throughput improvement in most of our experiments.
 
 \begin{figure}[h]
 \begin{centering}
@@ -294,7 +294,7 @@ Performance of one stream (or one thread) achieves 25 Mbps, while with 3 streams
 \end{figure}
 
 \subsection{Performance comparison with related works}
-To demonstrate the efficiency of the proposed ARM decoder, its throughput was compared to ARM related work in \cite{art_neon}. In \cite{art_neon}, ARM SIMD units are used to perform vector data processing in parallel frame processing. In the experiment, the throughput of the proposed decoder is compared to their work by using 1 thread for work in \cite{art_neon} and 3 threads in proposed algorithm. Two codes with 10-iteration decoding performed on Tegra-K1 board gives us the results as shown in Table \ref{table_compare_arm}. The work in \cite{art_neon} can achieve much higher throughputs by using more threads on ARM, but by introducing each thread, the whole capacity of one more ARM core is used for decoding. But in proposed algorithm, by introducing one thread, just 8\% process is used from ARM processor. Although by using more powerful GPU device, the algorithm can achieve much higher throughputs which has been shown in next subsection. In Table \ref{table_compare_arm}, it is shown that the proposed algorithm can achieve the same throughput in \cite{art_neon} with using 24\% of ARM processing power and using its GPU device. 
+To demonstrate the efficiency of the proposed ARM decoder, its throughput was compared to ARM related work in \cite{art_neon}. In \cite{art_neon}, ARM SIMD units are used to perform vector data processing in parallel frame decoding. In the experiment, the throughput of the proposed decoder is compared to their work by using 1 thread for work in \cite{art_neon} and 3 threads in the proposed algorithm. 10-iteration decoding performed on Tegra-K1 board gives us the results as shown in Table \ref{table_compare_arm}. The work in \cite{art_neon} can achieve much higher throughputs by using more threads on ARM, but by introducing each thread, the whole capacity of one more ARM core is used for decoding. But in the proposed algorithm, by introducing one thread, just 8\% process is used from ARM processor. Although by using more powerful GPU device, the algorithm can achieve much higher throughputs which has been shown in next subsection. In Table \ref{table_compare_arm}, it is shown that the proposed algorithm can achieve the same throughput in \cite{art_neon} with using 24\% of ARM processing power and using its GPU device. 
 \begin{table}[h]
 \centering
 \caption{Throughput (Mbps) Comparison With Related Work} \label{table_compare_arm}
@@ -311,7 +311,7 @@ To demonstrate the efficiency of the proposed ARM decoder, its throughput was co
 
 \subsection{Performance comparison on different GPU devices}
 
-GPU devices have different characteristics: amount of stream multiprocessors, CUDA cores, working frequencies, etc. For a GPU based algorithm, the scalability and using its all processing capability is important. In Table \ref{table:gpus}, proposed algorithm has been carried out on multiple GPU devices. GT540M and K620, are considered as mid-range and GTX680 and TeslaK20 are considered as high power GPU devices. The performance in Table \ref{table:gpus} shows that the proposed algorithm can achieve up to 230 Mbps performance. 
+GPU devices have different characteristics: amount of stream multiprocessors, CUDA cores, working frequencies, etc. A GPU based algorithm should have the scalability to use all processing capability of a GPU device. In Table \ref{table:gpus}, proposed algorithm has been carried out on multiple GPU devices. GT540M and K620, are considered as mid-range and GTX680 and TeslaK20 are considered as high power GPU devices. The performance in Table \ref{table:gpus} shows that the proposed algorithm can achieve up to 230 Mbps performance. 
 
 \begin{table}[h]
 \centering
@@ -327,14 +327,6 @@ GPU devices have different characteristics: amount of stream multiprocessors, CU
                                      &                                    & \textbf{5}    & \textbf{163} & \textbf{217}  \\ \cmidrule(l){2-5} 
                                      & \multirow{2}{*}{\textbf{TeslaK20}} & \textbf{10}   & \textbf{66}  & \textbf{90}   \\ \cmidrule(l){3-5} 
                                      &                                    & \textbf{5}    & \textbf{123} & \textbf{165}  \\ \midrule
-\multirow{8}{*}{\textbf{(4000,2000)}}& \multirow{2}{*}{\textbf{GT540M}}   & \textbf{10}   & \textbf{27}  & \textbf{34}   \\ \cmidrule(l){3-5} 
-                                     &                                    & \textbf{5}    & \textbf{27}  & \textbf{37}   \\ \cmidrule(l){2-5} 
-                                     & \multirow{2}{*}{\textbf{K620}}     & \textbf{10}   & \textbf{24}  & \textbf{32}   \\ \cmidrule(l){3-5}
-                                     &                                    & \textbf{5}    & \textbf{44}   & \textbf{60}   \\ \cmidrule(l){2-5}
-                                     & \multirow{2}{*}{\textbf{GTX680}}   & \textbf{10}   & \textbf{98}  & \textbf{131}  \\ \cmidrule(l){3-5}
-                                     &                                    & \textbf{5}    & \textbf{164}  & \textbf{230}  \\ \cmidrule(l){2-5}
-                                     & \multirow{2}{*}{\textbf{TeslaK20}} & \textbf{10}   & \textbf{73}  & \textbf{98}   \\ \cmidrule(l){3-5}
-                                     &                                    & \textbf{5}    & \textbf{139} & \textbf{196}  \\ \midrule
 \multirow{8}{*}{\textbf{(2304,1152)}}& \multirow{2}{*}{\textbf{GT540M}}   & \textbf{10}   & \textbf{25}  & \textbf{37}   \\ \cmidrule(l){3-5} 
                                      &                                    & \textbf{5}    & \textbf{47}  & \textbf{63}   \\ \cmidrule(l){2-5} 
                                      & \multirow{2}{*}{\textbf{K620}}     & \textbf{10}   & \textbf{23}  & \textbf{31.5} \\ \cmidrule(l){3-5}
@@ -342,7 +334,15 @@ GPU devices have different characteristics: amount of stream multiprocessors, CU
                                      & \multirow{2}{*}{\textbf{GTX680}}   & \textbf{10}   & \textbf{94}  & \textbf{132}  \\ \cmidrule(l){3-5}
                                      &                                    & \textbf{5}    & \textbf{170} & \textbf{226}   \\ \cmidrule(l){2-5}
                                      & \multirow{2}{*}{\textbf{TeslaK20}} & \textbf{10}   & \textbf{66}  & \textbf{94}   \\ \cmidrule(l){3-5}
-                                     &                                    & \textbf{5}    & \textbf{127} & \textbf{170}  \\ \bottomrule
+                                     &                                    & \textbf{5}    & \textbf{127} & \textbf{170}  \\ \midrule
+\multirow{8}{*}{\textbf{(4000,2000)}}& \multirow{2}{*}{\textbf{GT540M}}   & \textbf{10}   & \textbf{27}  & \textbf{34}   \\ \cmidrule(l){3-5} 
+                                     &                                    & \textbf{5}    & \textbf{27}  & \textbf{37}   \\ \cmidrule(l){2-5} 
+                                     & \multirow{2}{*}{\textbf{K620}}     & \textbf{10}   & \textbf{24}  & \textbf{32}   \\ \cmidrule(l){3-5}
+                                     &                                    & \textbf{5}    & \textbf{44}   & \textbf{60}   \\ \cmidrule(l){2-5}
+                                     & \multirow{2}{*}{\textbf{GTX680}}   & \textbf{10}   & \textbf{98}  & \textbf{131}  \\ \cmidrule(l){3-5}
+                                     &                                    & \textbf{5}    & \textbf{164}  & \textbf{230}  \\ \cmidrule(l){2-5}
+                                     & \multirow{2}{*}{\textbf{TeslaK20}} & \textbf{10}   & \textbf{73}  & \textbf{98}   \\ \cmidrule(l){3-5}
+                                     &                                    & \textbf{5}    & \textbf{139} & \textbf{196}  \\ \bottomrule
 \end{tabular}
 \end{table}
 
